Worked on productToString format

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/OOPAssesment.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.derbyclient.jar=C:\\Users\\angel\\Desktop\\derbyclient.jar
+file.reference.JTattoo-1.6.11.jar=C:\\Users\\angel\\Downloads\\JTattoo-1.6.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.JTattoo-1.6.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
